k8s/external-dns.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: external-dns
  namespace: kube-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: external-dns
  template:
    metadata:
      labels:
        app: external-dns
    spec:
      serviceAccountName: external-dns
      containers:
      - name: external-dns
        image: registry.k8s.io/external-dns/external-dns:v0.13.5
        args:
          - --source=service
          - --source=ingress
          - --domain-filter=jklikl.xyz           # Domain hosted on Route 53
          - --provider=aws
          - --aws-zone-type=public
          - --policy=upsert-only                 # or sync => Policy for DNS records
          - --registry=txt                       # Registry type for DNS records
          - --txt-owner-id=Z0267806O1ZEA5AYQN1A  # Owner ID for TXT records
        resources:
          requests:
            memory: "64Mi"   
            cpu: "250m"     
          limits:
            memory: "128Mi" 
            cpu: "500m"
